@@ -54,9 +54,11 @@ tlbe-main-window-toggle=Open/Close camera settings
 
 [mod-setting-name]
 tlbe-save-folder=Save location
+tlbe-sequential-names=Sequential names
 
 [mod-setting-description]
 tlbe-save-folder=Relative from 'User Data Directory'
+tlbe-sequential-names=Use sequential numbering per camera for the screenshot numbers. When disabled, game ticks are used for screenshot numbering.
 
 [shortcut]
 tlbe=Time Lapse Base Edition
