@@ -6,6 +6,13 @@ data:extend(
             setting_type = "runtime-per-user",
             default_value = "timelapse",
             order = "3"
+        },
+        {
+            type = "bool-setting",
+            name = "tlbe-sequential-names",
+            setting_type = "runtime-per-user",
+            default_value = true,
+            order = "6"
         }
     }
 )
